freenet-ext: update bdb-je to 3.3.62 (see email on @devl)
git-svn-id: file:///home/toad/git-migration/temprepository/trunk/contrib@21990 67a373e5-eb02-0410-a15c-ee090a768436