@@ -1,19 +1,17 @@
 /*-
  * See the file LICENSE for redistribution information.
  *
- * Copyright (c) 2002,2007 Oracle.  All rights reserved.
+ * Copyright (c) 2002,2008 Oracle.  All rights reserved.
  *
- * $Id: SortedLSNTreeWalker.java,v 1.17.2.4 2007/11/20 13:32:28 cwl Exp $
+ * $Id: SortedLSNTreeWalker.java,v 1.37 2008/05/13 17:09:00 mark Exp $
  */
 
 package com.sleepycat.je.dbi;
 
 import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
-import java.util.Set;
 
+import com.sleepycat.je.CacheMode;
 import com.sleepycat.je.DatabaseEntry;
 import com.sleepycat.je.DatabaseException;
 import com.sleepycat.je.cleaner.OffsetList;
@@ -31,8 +29,15 @@ import com.sleepycat.je.tree.Node;
 import com.sleepycat.je.utilint.DbLsn;
 
 /**
- * Class to walk over the tree using sorted LSN fetching for parts of the tree
- * that are not in memory.  Returns LSNs for each node in the tree
+ * SortedLSNTreeWalker uses ordered disk access rather than random access to
+ * iterate over a database tree. Faulting in data records by on-disk order can
+ * provide much improved performance over faulting in by key order, since the
+ * latter may require random access.  SortedLSN walking does not obey cursor
+ * and locking constraints, and therefore can only be guaranteed consistent for
+ * a quiescent tree which is not being modified by user or daemon threads.
+ *
+ * The class walks over the tree using sorted LSN fetching for parts of the
+ * tree that are not in memory. Returns LSNs for each node in the tree
  * <b>except</b> the root IN, but in an arbitrary order (i.e. not key
  * order). The caller is responsible for getting the root IN's LSN explicitly.
  * <p>
@@ -44,7 +49,7 @@ import com.sleepycat.je.utilint.DbLsn;
  * each IN, all of the LSNs of the children are passed to the callback method
  * (processLSN).  If the child was not in memory, it is added to a list of LSNs
  * to read.  When all of the in-memory INs have been processed, the list of
- * LSNs that were harvested are sorted.
+ * LSNs that were harvested is sorted.
  * <p>
  * Then for each of the sorted LSNs, the target is fetched, the type
  * determined, and the LSN and type passed to the callback method for
@@ -69,7 +74,7 @@ public class SortedLSNTreeWalker {
 	    throws DatabaseException;
 
 	/* Used when processing DW dbs where there are no LSNs. */
-	void processDupCount(long count);
+	void processDupCount(int count);
     }
 
     /*
@@ -92,12 +97,6 @@ public class SortedLSNTreeWalker {
 
     /* Indicates whether db has allowDuplicates set. */
     private boolean dups;
-
-    /*
-     * Set removeINsFromINList to true if INs read from the INList should be
-     * removed.
-     */
-    private boolean removeINsFromINList;
 
     /*
      * Whether to call DatabaseImpl.finishedINListHarvest().
@@ -137,7 +136,7 @@ public class SortedLSNTreeWalker {
     private boolean processDupTree = true;
 
     /*
-     * If true, then we still pass nodes that have null lsns (i.e. during
+     * If true, then we still pass nodes that have null LSNs (i.e. during
      * DeferredWrite DB processing in Database.count().
      */
     private boolean passNullLSNNodes = false;
@@ -147,7 +146,7 @@ public class SortedLSNTreeWalker {
      * this savedException list, in order to walk as much of the tree as
      * possible. The caller of the tree walker will handle the exceptions.
      */
-    private List savedExceptions;
+    private List<DatabaseException> savedExceptions;
 
     private ExceptionPredicate excPredicate;
 
@@ -159,11 +158,10 @@ public class SortedLSNTreeWalker {
      * root may be nulled out on the dbImpl before walk() is called.
      */
     public SortedLSNTreeWalker(DatabaseImpl dbImpl,
-			       boolean removeINsFromINList,
 			       boolean setDbState,
                                long rootLsn,
 			       TreeNodeProcessor callback,
-                               List savedExceptions,
+                               List<DatabaseException> savedExceptions,
 			       ExceptionPredicate excPredicate)
 	throws DatabaseException {
 
@@ -177,7 +175,6 @@ public class SortedLSNTreeWalker {
 	}
 	this.dups = dbImpl.getSortedDuplicates();
 
-	this.removeINsFromINList = removeINsFromINList;
 	this.setDbState = setDbState;
         this.rootLsn = rootLsn;
 	this.callback = callback;
@@ -195,66 +192,8 @@ public class SortedLSNTreeWalker {
 	this.passNullLSNNodes = passNullLSNNodes;
     }
 
-    /*
-     * Return true if some INs were found on the INList for this db.
-     */
-    private boolean extractINsForDb(INList inList)
-	throws DatabaseException {
-
-	boolean foundSome = false;
-
-        /* Search the INList and put all qualifying INs into another list. */
-        Set foundSet = new HashSet();
-        long memoryChange = 0;
-        MemoryBudget mb = envImpl.getMemoryBudget();
-	inList.latchMajor();
-	try {
-            /* Consolidate the INList first. */
-            inList.latchMinorAndDumpAddedINs();
-
-	    Iterator iter = inList.iterator();
-	    while (iter.hasNext()) {
-		IN thisIN = (IN) iter.next();
-		if (thisIN.getDatabase() == dbImpl) {
-		    foundSome = true;
-		    if (removeINsFromINList) {
-			iter.remove();
-                        memoryChange += (thisIN.getAccumulatedDelta() -
-                                         thisIN.getInMemorySize());
-                        thisIN.setInListResident(false);
-		    }
-                    foundSet.add(thisIN);
-		}
-	    }
-        } catch (DatabaseException e) {
-            /* Update the memory budget with any changes. */
-            mb.updateTreeMemoryUsage(memoryChange);
-            throw e;
-	} finally {
-	    inList.releaseMajorLatch();
-	}
-
-        /*
-         * Do processing outside of INList latch in order to reduce lockout
-         * of checkpointing and eviction.
-         */
-        if (foundSome) {
-            Iterator iter = foundSet.iterator();
-            while (iter.hasNext()) {
-                IN thisIN = (IN) iter.next();
-                accumulateLSNs(thisIN);
-            }
-        }
-
-        /*
-         * Update the memory in one fell swoop after releasing all references
-         * to INs in order to reduce contention on memory budget contention
-         * latch. Wait until all references to INs are released.
-         */
-        foundSet = null;
-        mb.updateTreeMemoryUsage(memoryChange);
-
-	return foundSome;
+    void setAccumulateLNs(boolean accumulateLNs) {
+	this.accumulateLNs = accumulateLNs;
     }
 
     /**
@@ -270,17 +209,19 @@ public class SortedLSNTreeWalker {
     protected void walkInternal()
 	throws DatabaseException {
 
-	INList inList = envImpl.getInMemoryINs();
 	IN root = null;
-	if (!extractINsForDb(inList)) {
-	    if (rootLsn == DbLsn.NULL_LSN) {
-		return;
-	    }
+	if (rootLsn == DbLsn.NULL_LSN && !passNullLSNNodes) {
+	    return;
+	}
 
+	root = getResidentRootIN();
+	if (root == null && rootLsn != DbLsn.NULL_LSN) {
 	    root = getRootIN(rootLsn);
+	}
+	if (root != null) {
 	    accumulateLSNs(root);
 	    releaseRootIN(root);
-        }
+	}
 
         if (setDbState) {
             dbImpl.finishedINListHarvest();
@@ -290,12 +231,15 @@ public class SortedLSNTreeWalker {
 	    maybeGetMoreINs();
 	    if (currentLSNs != null &&
 		currentLSNIdx < currentLSNs.length) {
+		didSomeMore = true;
                 fetchAndProcessLSN(currentLSNs[currentLSNIdx++]);
 	    } else {
 		break;
 	    }
 	}
     }
+
+    public boolean didSomeMore = false;
 
     private void maybeGetMoreINs() {
 
@@ -355,7 +299,8 @@ public class SortedLSNTreeWalker {
 	 * Process all children, but only accumulate LSNs for children that are
 	 * not in memory.
 	 */
-	if (processDupTree || !in.containsDuplicates()) {
+	if (in != null &&
+	    (processDupTree || !in.containsDuplicates())) {
 	    for (int i = 0; i < in.getNEntries(); i++) {
 
 		long lsn = in.getLsn(i);
@@ -375,7 +320,9 @@ public class SortedLSNTreeWalker {
 		    continue;
 		}
 
-		if (accumulate && (node == null)) {
+		if (accumulate &&
+                    (node == null) &&
+                    lsn != DbLsn.NULL_LSN) {
 		    if (accumulatedLSNFileNumbers == null) {
 			accumulatedLSNFileNumbers = new OffsetList();
 			accumulatedLSNFileOffsets = new OffsetList();
@@ -390,14 +337,14 @@ public class SortedLSNTreeWalker {
 		     * If we're maintaining a map from LSN to owning IN/index,
 		     * then update the map here.
 		     */
-		    addToLsnINMap(new Long(lsn), in, i);
+		    addToLsnINMap(Long.valueOf(lsn), in, i);
 		    /* callback.processLSN is called when we fetch this LSN. */
 		} else if (lsn != DbLsn.NULL_LSN ||
-			   passNullLSNNodes){
+			   passNullLSNNodes) {
 
 		    /*
 		     * If the child is resident, use that log type, else we can
-		     * assume it's a LN.
+		     * assume it's an LN.
 		     */
                     byte[] lnKey = (node == null || node instanceof LN) ?
                         in.getKey(i) : null;
@@ -406,6 +353,15 @@ public class SortedLSNTreeWalker {
 					node.getLogType(),
 					node,
                                         lnKey);
+		    if (node instanceof IN) {
+                        IN nodeAsIN = (IN) node;
+                        try {
+                            nodeAsIN.latch(CacheMode.UNCHANGED);
+                            accumulateLSNs(nodeAsIN);
+                        } finally {
+                            nodeAsIN.releaseLatch();
+                        }
+		    }
 		}
 	    }
 	}
@@ -416,11 +372,11 @@ public class SortedLSNTreeWalker {
 	    ChildReference dupCountLNRef = din.getDupCountLNRef();
 	    long lsn = dupCountLNRef.getLsn();
 	    if (lsn == DbLsn.NULL_LSN) {
-		DupCountLN dcl = (DupCountLN) din.getDupCountLN();
+		DupCountLN dcl = din.getDupCountLN();
 		callback.processDupCount(dcl.getDupCount());
 	    } else {
                 /* Negative index signifies a DupCountLN. */
-                addToLsnINMap(new Long(lsn), in, -1);
+                addToLsnINMap(Long.valueOf(lsn), in, -1);
 		Node node = fetchLSN(lsn, lnKeyEntry);
 		callback.processLSN
                     (lsn, LogEntryType.LOG_DUPCOUNTLN, node,
@@ -439,12 +395,24 @@ public class SortedLSNTreeWalker {
         try {
             lnKeyEntry.setData(null);
             Node node = fetchLSN(lsn, lnKeyEntry);
-            if (node != null) {
-                callback.processLSN
-                    (lsn, node.getLogType(), node, lnKeyEntry.getData());
+            boolean isIN = (node instanceof IN);
+            IN in = null;
+            try {
+                if (isIN) {
+                    in = (IN) node;
+                    in.latch(CacheMode.UNCHANGED);
+                }
+                if (node != null) {
+                    callback.processLSN
+                        (lsn, node.getLogType(), node, lnKeyEntry.getData());
 
-                if (node instanceof IN) {
-                    accumulateLSNs((IN) node);
+                    if (isIN) {
+                        accumulateLSNs(in);
+                    }
+                }
+            } finally {
+                if (isIN) {
+                    in.releaseLatch();
                 }
             }
         } catch (DatabaseException e) {
@@ -474,6 +442,12 @@ public class SortedLSNTreeWalker {
 	return (IN) envImpl.getLogManager().get(rootLsn);
     }
 
+    protected IN getResidentRootIN()
+	throws DatabaseException {
+
+	return dbImpl.getTree().getResidentRootIN(false);
+    }
+
     protected void releaseRootIN(IN ignore)
 	throws DatabaseException {
 
@@ -499,7 +473,7 @@ public class SortedLSNTreeWalker {
         return (Node) entry.getMainItem();
     }
 
-    public List getSavedExceptions() {
+    public List<DatabaseException> getSavedExceptions() {
         return savedExceptions;
     }
 }
