@@ -1,9 +1,9 @@
 /*-
  * See the file LICENSE for redistribution information.
  *
- * Copyright (c) 2002,2007 Oracle.  All rights reserved.
+ * Copyright (c) 2002,2008 Oracle.  All rights reserved.
  *
- * $Id: Evictor.java,v 1.86.2.11 2007/12/14 01:43:26 mark Exp $
+ * $Id: Evictor.java,v 1.114 2008/05/20 03:27:35 linda Exp $
  */
 
 package com.sleepycat.je.evictor;
@@ -12,22 +12,23 @@ import java.text.NumberFormat;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
+import com.sleepycat.je.CacheMode;
 import com.sleepycat.je.DatabaseException;
 import com.sleepycat.je.EnvironmentStats;
 import com.sleepycat.je.StatsConfig;
-import com.sleepycat.je.cleaner.TrackedFileSummary;
-import com.sleepycat.je.cleaner.UtilizationTracker;
+import com.sleepycat.je.cleaner.LocalUtilizationTracker;
 import com.sleepycat.je.config.EnvironmentParams;
 import com.sleepycat.je.dbi.DatabaseImpl;
 import com.sleepycat.je.dbi.DbConfigManager;
+import com.sleepycat.je.dbi.DbTree;
 import com.sleepycat.je.dbi.EnvironmentImpl;
 import com.sleepycat.je.dbi.INList;
 import com.sleepycat.je.dbi.MemoryBudget;
 import com.sleepycat.je.latch.LatchSupport;
-import com.sleepycat.je.log.LogManager;
 import com.sleepycat.je.recovery.Checkpointer;
 import com.sleepycat.je.tree.BIN;
 import com.sleepycat.je.tree.ChildReference;
@@ -46,22 +47,19 @@ import com.sleepycat.je.utilint.Tracer;
  * eviction.  Once the nodes are selected, it removes all references to them so
  * that they can be GC'd by the JVM.
  */
-public class Evictor extends DaemonThread {
+public abstract class Evictor extends DaemonThread {
     public static final String SOURCE_DAEMON = "daemon";
     public static final String SOURCE_MANUAL = "manual";
     public static final String SOURCE_CRITICAL = "critical";
     private static final boolean DEBUG = false;
 
+    private MemoryBudget.Totals memBudgetTotals;
+
     /* Prevent endless eviction loops under extreme resource constraints. */
     private static final int MAX_BATCHES_PER_RUN = 100;
 
-    private EnvironmentImpl envImpl;
-    private LogManager logManager;
     private Level detailedTraceLevel;  // level value for detailed trace msgs
     private volatile boolean active;   // true if eviction is happening.
-
-    /* Round robin marker in the INList, indicates start of eviction scans. */
-    private IN nextNode;
 
     /* The number of bytes we need to evict in order to get under budget. */
     private long currentRequiredEvictBytes;
@@ -78,6 +76,9 @@ public class Evictor extends DaemonThread {
     /* je.evictor.forceYield */
     private boolean forcedYield;
 
+    /* je.evictor.deadlockRetry */
+    private int deadlockRetries;
+
     /* for trace messages. */
     private NumberFormat formatter;
 
@@ -86,15 +87,15 @@ public class Evictor extends DaemonThread {
      */
 
     /* Number of passes made to the evictor. */
-    private int nEvictPasses = 0;
+    private long nEvictPasses = 0;
 
     /* Number of nodes selected to evict. */
     private long nNodesSelected = 0;
     private long nNodesSelectedThisRun;
 
     /* Number of nodes scanned in order to select the eviction set */
-    private int nNodesScanned = 0;
-    private int nNodesScannedThisRun;
+    private long nNodesScanned = 0;
+    private long nNodesScannedThisRun;
 
     /*
      * Number of nodes evicted on this run. This could be understated, as a
@@ -102,6 +103,12 @@ public class Evictor extends DaemonThread {
      */
     private long nNodesEvicted = 0;
     private long nNodesEvictedThisRun;
+
+    /*
+     * Number of closed database root nodes evicted on this run.
+     */
+    private long nRootNodesEvicted = 0;
+    private long nRootNodesEvictedThisRun;
 
     /* Number of BINs stripped. */
     private long nBINsStripped = 0;
@@ -111,13 +118,12 @@ public class Evictor extends DaemonThread {
     EvictProfile evictProfile;
     private TestHook runnableHook;
 
-    public Evictor(EnvironmentImpl envImpl, String name)
+    Evictor(EnvironmentImpl envImpl, String name)
         throws DatabaseException {
 
         super(0, name, envImpl);
-        this.envImpl = envImpl;
-        logManager = envImpl.getLogManager();
-        nextNode = null;
+
+        memBudgetTotals = envImpl.getMemoryBudget().getTotals();
 
         DbConfigManager configManager = envImpl.getConfigManager();
         nodesPerScan = configManager.getInt
@@ -128,6 +134,8 @@ public class Evictor extends DaemonThread {
             (EnvironmentParams.EVICTOR_LRU_ONLY);
         forcedYield = configManager.getBoolean
             (EnvironmentParams.EVICTOR_FORCED_YIELD);
+        deadlockRetries = configManager.getInt
+            (EnvironmentParams.EVICTOR_RETRY);
         detailedTraceLevel = Tracer.parseLevel
             (envImpl, EnvironmentParams.JE_LOGGING_LEVEL_EVICTOR);
 
@@ -135,17 +143,6 @@ public class Evictor extends DaemonThread {
         formatter = NumberFormat.getNumberInstance();
 
         active = false;
-    }
-
-    /**
-     * Evictor doesn't have a work queue so just throw an exception if it's
-     * ever called.
-     */
-    public void addToQueue(Object o)
-        throws DatabaseException {
-
-        throw new DatabaseException
-            ("Evictor.addToQueue should never be called.");
     }
 
     /**
@@ -158,6 +155,7 @@ public class Evictor extends DaemonThread {
         stat.setNNodesSelected(nNodesSelected);
         stat.setNNodesScanned(nNodesScanned);
         stat.setNNodesExplicitlyEvicted(nNodesEvicted);
+        stat.setNRootNodesEvicted(nRootNodesEvicted);
         stat.setNBINsStripped(nBINsStripped);
         stat.setRequiredEvictBytes(currentRequiredEvictBytes);
 
@@ -166,22 +164,18 @@ public class Evictor extends DaemonThread {
             nNodesSelected = 0;
             nNodesScanned = 0;
             nNodesEvicted = 0;
+            nRootNodesEvicted = 0;
             nBINsStripped = 0;
         }
-    }
-
-    synchronized public void clearEnv() {
-        envImpl = null;
     }
 
     /**
      * Return the number of retries when a deadlock exception occurs.
      */
-    protected int nDeadlockRetries()
+    protected long nDeadlockRetries()
         throws DatabaseException {
 
-        return envImpl.getConfigManager().getInt
-            (EnvironmentParams.EVICTOR_RETRY);
+        return deadlockRetries;
     }
 
     /**
@@ -198,10 +192,6 @@ public class Evictor extends DaemonThread {
      */
     public void onWakeup()
         throws DatabaseException {
-
-        if (envImpl.isClosed()) {
-            return;
-        }
 
         doEvict(SOURCE_DAEMON,
                 false, // criticalEviction
@@ -267,12 +257,11 @@ public class Evictor extends DaemonThread {
     public void doCriticalEviction(boolean backgroundIO)
         throws DatabaseException {
 
-        MemoryBudget mb = envImpl.getMemoryBudget();
-        long currentUsage  = mb.getCacheMemoryUsage();
-        long maxMem = mb.getCacheBudget();
+        long currentUsage  = memBudgetTotals.getCacheUsage();
+        long maxMem = memBudgetTotals.getMaxMemory();
         long over = currentUsage - maxMem;
 
-        if (over > mb.getCriticalThreshold()) {
+        if (over > memBudgetTotals.getCriticalThreshold()) {
             if (DEBUG) {
                 System.out.println("***critical detected:" + over);
             }
@@ -287,10 +276,8 @@ public class Evictor extends DaemonThread {
     }
 
     /**
-     * Each iteration will latch and unlatch the major INList, and will attempt
-     * to evict requiredEvictBytes, but will give up after a complete pass
-     * over the major INList. Releasing the latch is important because it
-     * provides an opportunity for to add the minor INList to the major INList.
+     * Each iteration will attempt to evict requiredEvictBytes, but will give
+     * up after a complete pass over the INList.
      *
      * @return the number of bytes evicted, or zero if no progress was made.
      */
@@ -301,6 +288,7 @@ public class Evictor extends DaemonThread {
 
         nNodesSelectedThisRun = 0;
         nNodesEvictedThisRun = 0;
+        nRootNodesEvictedThisRun = 0;
         nNodesScannedThisRun = 0;
         nBINsStrippedThisRun = 0;
         nEvictPasses++;
@@ -308,88 +296,98 @@ public class Evictor extends DaemonThread {
         assert evictProfile.clear(); // intentional side effect
         int nBatchSets = 0;
         boolean finished = false;
-        long evictBytes = 0;
 
-        /* Evict utilization tracking info without holding the INList latch. */
-        evictBytes += envImpl.getUtilizationTracker().evictMemory();
+        /* Perform class-specific per-batch processing. */
+        long evictBytes = startBatch();
 
-        INList inList = envImpl.getInMemoryINs();
-        inList.latchMajor();
-        int inListStartSize = inList.getSize();
-
-        /*
-         * Use a tracker to count lazily compressed, deferred write, LNs as
-         * obsolete.  A separate tracker is used to accumulate tracked obsolete
-         * info so it can be added in a single call under the log write latch.
-         * [#15365]
-         */
-        UtilizationTracker tracker = new UtilizationTracker(envImpl);
+        /* Must call getMaxINsPerBatch after startBatch. */
+        int maxINsPerBatch = getMaxINsPerBatch();
+        if (maxINsPerBatch == 0) {
+            return evictBytes; // The INList(s) are empty.
+        }
 
         try {
-
-            /*
-             * Setup the round robin iterator. Note that because critical
-             * eviction is now called during recovery, when the INList is
-             * sometimes abruptly cleared, nextNode may not be null when the
-             * INList is empty.
-             */
-            if (inListStartSize == 0) {
-                nextNode = null;
-                return 0;
-            } else {
-                if (nextNode == null) {
-                    nextNode = inList.first();
-                }
-            }
-
-            ScanIterator scanIter = new ScanIterator(nextNode, inList);
 
             /*
              * Keep evicting until we've freed enough memory or we've visited
              * the maximum number of nodes allowed. Each iteration of the while
              * loop is called an eviction batch.
              *
-             * In order to prevent endless evicting and not keep the INList
-             * major latch for too long, limit this run to one pass over the IN
-             * list.
+             * In order to prevent endless evicting, limit this run to one pass
+             * over the IN list(s).
              */
             while ((evictBytes < requiredEvictBytes) &&
-                   (nNodesScannedThisRun <= inListStartSize) &&
-                   envImpl.getMemoryBudget().isTreeUsageAboveMinimum()) {
+                   (nNodesScannedThisRun <= maxINsPerBatch)) {
 
-                IN target = selectIN(inList, scanIter);
+                IN target = selectIN(maxINsPerBatch);
 
                 if (target == null) {
                     break;
                 } else {
                     assert evictProfile.count(target);//intentional side effect
 
-                    if (target.isDbRoot()) {
-                        evictBytes += evictRoot
-                            (inList, target, scanIter, backgroundIO);
-                    } else {
-                        evictBytes += evict
-                            (inList, target, scanIter, backgroundIO, tracker);
+                    /*
+                     * Check to make sure the DB was not deleted after
+                     * selecting it, and prevent the DB from being deleted
+                     * while we're working with it.
+                     */
+                    DatabaseImpl targetDb = target.getDatabase();
+                    DbTree dbTree = targetDb.getDbEnvironment().getDbTree();
+                    DatabaseImpl refreshedDb = null;
+                    try {
+                        refreshedDb = dbTree.getDb(targetDb.getId());
+                        if (refreshedDb != null && !refreshedDb.isDeleted()) {
+                            if (target.isDbRoot()) {
+                                evictBytes += evictRoot(target, backgroundIO);
+                            } else {
+                                evictBytes += evictIN(target, backgroundIO);
+                            }
+                        } else {
+
+                            /*
+                             * We don't expect to see an IN that is resident on
+                             * the INList with a database that has finished
+                             * delete processing, because it should have been
+                             * removed from the INList during post-delete
+                             * cleanup.  It may have been returned by the
+                             * INList iterator after being removed from the
+                             * INList (because we're using ConcurrentHashMap),
+                             * but then IN.getInListResident should return
+                             * false.
+                             */
+                            if (targetDb.isDeleteFinished() &&
+                                target.getInListResident()) {
+                                String inInfo =
+                                    " IN type=" + target.getLogType() +
+                                    " id=" + target.getNodeId() +
+                                    " not expected on INList";
+                                String errMsg = (refreshedDb == null) ?
+                                    inInfo :
+                                    ("Database " + refreshedDb.getDebugName() +
+                                     " id=" + refreshedDb.getId() +
+                                     " rootLsn=" +
+                                     DbLsn.getNoFormatString
+                                         (refreshedDb.getTree().getRootLsn()) +
+                                     ' ' + inInfo);
+                                throw new DatabaseException(errMsg);
+                            }
+                        }
+                    } finally {
+                        dbTree.releaseDb(refreshedDb);
                     }
                 }
                 nBatchSets++;
             }
 
-            /*
-             * At the end of the scan, look at the next element in the INList
-             * and put it in nextNode for the next time we scan the INList.
-             */
-            nextNode = scanIter.mark();
             finished = true;
 
         } finally {
             nNodesScanned += nNodesScannedThisRun;
-            inList.releaseMajorLatch();
 
-            Logger logger = envImpl.getLogger();
-            if (logger.isLoggable(detailedTraceLevel)) {
+            Logger logger = getLogger();
+            if (logger != null && logger.isLoggable(detailedTraceLevel)) {
                 /* Ugh, only create trace message when logging. */
-                Tracer.trace(detailedTraceLevel, envImpl,
+                logger.log(detailedTraceLevel,
                              "Evictor: pass=" + nEvictPasses +
                              " finished=" + finished +
                              " source=" + source +
@@ -397,10 +395,11 @@ public class Evictor extends DaemonThread {
                              formatter.format(requiredEvictBytes) +
                              " evictBytes=" +
                              formatter.format(evictBytes) +
-                             " inListSize=" + inListStartSize +
+                             " inListSize=" + maxINsPerBatch +
                              " nNodesScanned=" + nNodesScannedThisRun +
                              " nNodesSelected=" + nNodesSelectedThisRun +
-                             " nEvicted=" + nNodesEvictedThisRun +
+                             " nNodesEvicted=" + nNodesEvictedThisRun +
+                             " nRootNodesEvicted=" + nRootNodesEvictedThisRun +
                              " nBINsStripped=" + nBINsStrippedThisRun +
                              " nBatchSets=" + nBatchSets);
             }
@@ -409,27 +408,18 @@ public class Evictor extends DaemonThread {
         assert LatchSupport.countLatchesHeld() == 0: "latches held = " +
             LatchSupport.countLatchesHeld();
 
-        /*
-         * Count obsolete nodes and write out modified file summaries for
-         * recovery.  All latches must have been released. [#15365]
-         */
-        TrackedFileSummary[] summaries = tracker.getTrackedFiles();
-        if (summaries.length > 0) {
-            envImpl.getUtilizationProfile().countAndLogSummaries(summaries);
-        }
-
         return evictBytes;
     }
 
     /**
-     * Return true if eviction should happen.
+     * Return true if eviction should happen.  As a side effect, if true is
+     * returned the currentRequiredEvictBytes is set.
      */
-    boolean isRunnable(String source)
+    private boolean isRunnable(String source)
         throws DatabaseException {
 
-        MemoryBudget mb = envImpl.getMemoryBudget();
-        long currentUsage  = mb.getCacheMemoryUsage();
-        long maxMem = mb.getCacheBudget();
+        long currentUsage  = memBudgetTotals.getCacheUsage();
+        long maxMem = memBudgetTotals.getMaxMemory();
         long overBudget = currentUsage - maxMem;
         boolean doRun = (overBudget > 0);
 
@@ -457,8 +447,8 @@ public class Evictor extends DaemonThread {
          * This trace message is expensive, only generate if tracing at this
          * level is enabled.
          */
-        Logger logger = envImpl.getLogger();
-        if (logger.isLoggable(detailedTraceLevel)) {
+        Logger logger = getLogger();
+        if (logger != null && logger.isLoggable(detailedTraceLevel)) {
 
             /*
              * Generate debugging output. Note that Runtime.freeMemory
@@ -488,7 +478,7 @@ public class Evictor extends DaemonThread {
     /**
      * Select a single node to evict.
      */
-    private IN selectIN(INList inList, ScanIterator scanIter)
+    private IN selectIN(int maxNodesToIterate)
         throws DatabaseException {
 
         /* Find the best target in the next <nodesPerScan> nodes. */
@@ -496,109 +486,97 @@ public class Evictor extends DaemonThread {
         long targetGeneration = Long.MAX_VALUE;
         int targetLevel = Integer.MAX_VALUE;
         boolean targetDirty = true;
-	boolean envIsReadOnly = envImpl.isReadOnly();
-        int scanned = 0;
-        boolean wrapped = false;
-        while (scanned < nodesPerScan) {
-            if (scanIter.hasNext()) {
-                IN in = scanIter.next();
-                nNodesScannedThisRun++;
 
-                DatabaseImpl db = in.getDatabase();
+        /* The nodesPerScan limit is on nodes that qualify for eviction. */
+        int nCandidates = 0;
+
+        /* The limit on iterated nodes is to prevent an infinite loop. */
+        int nIterated = 0;
+
+        while (nIterated <  maxNodesToIterate && nCandidates < nodesPerScan) {
+            IN in = getNextIN();
+            if (in == null) {
+                break; // INList is empty
+            }
+            nIterated++;
+            nNodesScannedThisRun++;
+
+            DatabaseImpl db = in.getDatabase();
+
+            /*
+             * Ignore the IN if its database is deleted.  We have not called
+             * getDb, so we can't guarantee that the DB is valid; get Db is
+             * called and this is checked again after an IN is selected for
+             * eviction.
+             */
+            if (db == null || db.isDeleted()) {
+                continue;
+            }
+
+            /*
+             * If this is a read only database and we have at least one
+             * target, skip any dirty INs (recovery dirties INs even in a
+             * read-only environment). We take at least one target so we
+             * don't loop endlessly if everything is dirty.
+             */
+            if (db.getDbEnvironment().isReadOnly() &&
+                target != null &&
+                in.getDirty()) {
+                continue;
+            }
+
+            /*
+             * Only scan evictable or strippable INs.  This prevents higher
+             * level INs from being selected for eviction, unless they are
+             * part of an unused tree.
+             */
+            int evictType = in.getEvictionType();
+            if (evictType == IN.MAY_NOT_EVICT) {
+                continue;
+            }
+
+            /*
+             * This node is in the scanned node set.  Select according to
+             * the configured eviction policy.
+             */
+            if (evictByLruOnly) {
 
                 /*
-                 * We don't expect to see an IN with a database that has
-                 * finished delete processing, because it would have been
-                 * removed from the inlist during post-delete cleanup.
+                 * Select the node with the lowest generation number,
+                 * irrespective of tree level or dirtyness.
                  */
-                if (db == null || db.isDeleteFinished()) {
-                    String inInfo = " IN type=" + in.getLogType() + " id=" +
-                        in.getNodeId() + " not expected on INList";
-                    String errMsg = (db == null) ? inInfo :
-                        "Database " + db.getDebugName() + " id=" + db.getId() +
-                        " rootLsn=" +
-                        DbLsn.getNoFormatString(db.getTree().getRootLsn()) +
-                        ' ' + inInfo;
-                    throw new DatabaseException(errMsg);
+                if (targetGeneration > in.getGeneration()) {
+                    targetGeneration = in.getGeneration();
+                    target = in;
                 }
-
-                /* Ignore if the db is in the middle of delete processing. */
-                if (db.isDeleted()) {
-                    continue;
-                }
+            } else {
 
                 /*
-                 * If this is a read only database and we have at least one
-                 * target, skip any dirty INs (recovery dirties INs even in a
-                 * read-only environment). We take at least one target so we
-                 * don't loop endlessly if everything is dirty.
+                 * Select first by tree level, then by dirtyness, then by
+                 * generation/LRU.
                  */
-                if (envIsReadOnly && (target != null) && in.getDirty()) {
-                    continue;
-                }
-
-                /*
-                 * Only scan evictable or strippable INs.  This prevents higher
-                 * level INs from being selected for eviction, unless they are
-                 * part of an unused tree.
-                 */
-                int evictType = in.getEvictionType();
-                if (evictType == IN.MAY_NOT_EVICT) {
-                    continue;
-                }
-
-                /*
-                 * This node is in the scanned node set.  Select according to
-                 * the configured eviction policy.
-                 */
-                if (evictByLruOnly) {
-
-                    /*
-                     * Select the node with the lowest generation number,
-                     * irrespective of tree level or dirtyness.
-                     */
-                    if (targetGeneration > in.getGeneration()) {
+                int level = normalizeLevel(in, evictType);
+                if (targetLevel != level) {
+                    if (targetLevel > level) {
+                        targetLevel = level;
+                        targetDirty = in.getDirty();
+                        targetGeneration = in.getGeneration();
+                        target = in;
+                    }
+                } else if (targetDirty != in.getDirty()) {
+                    if (targetDirty) {
+                        targetDirty = false;
                         targetGeneration = in.getGeneration();
                         target = in;
                     }
                 } else {
-
-                    /*
-                     * Select first by tree level, then by dirtyness, then by
-                     * generation/LRU.
-                     */
-                    int level = normalizeLevel(in, evictType);
-                    if (targetLevel != level) {
-                        if (targetLevel > level) {
-                            targetLevel = level;
-                            targetDirty = in.getDirty();
-                            targetGeneration = in.getGeneration();
-                            target = in;
-                        }
-                    } else if (targetDirty != in.getDirty()) {
-                        if (targetDirty) {
-                            targetDirty = false;
-                            targetGeneration = in.getGeneration();
-                            target = in;
-                        }
-                    } else {
-                        if (targetGeneration > in.getGeneration()) {
-                            targetGeneration = in.getGeneration();
-                            target = in;
-                        }
+                    if (targetGeneration > in.getGeneration()) {
+                        targetGeneration = in.getGeneration();
+                        target = in;
                     }
                 }
-                scanned++;
-            } else {
-                /* We wrapped around in the list. */
-                if (wrapped) {
-                    break;
-                } else {
-                    nextNode = inList.first();
-                    scanIter.reset(nextNode);
-                    wrapped = true;
-                }
             }
+            nCandidates++;
         }
 
         if (target != null) {
@@ -650,13 +628,13 @@ public class Evictor extends DaemonThread {
      * Evict this DB root node.  [#13415]
      * @return number of bytes evicted.
      */
-    private long evictRoot(final INList inList,
-                           final IN target,
-                           final ScanIterator scanIter,
+    private long evictRoot(final IN target,
                            final boolean backgroundIO)
         throws DatabaseException {
 
         final DatabaseImpl db = target.getDatabase();
+        final EnvironmentImpl envImpl = db.getDbEnvironment();
+        final INList inList = envImpl.getInMemoryINs();
 
         class RootEvictor implements WithRootLatched {
 
@@ -667,7 +645,7 @@ public class Evictor extends DaemonThread {
                 throws DatabaseException {
 
                 IN rootIN = (IN) root.fetchTarget(db, null);
-                rootIN.latch(false);
+                rootIN.latch(CacheMode.UNCHANGED);
                 try {
                     /* Re-check that all conditions still hold. */
                     if (rootIN == target &&
@@ -688,13 +666,15 @@ public class Evictor extends DaemonThread {
                         }
 
                         /* Take off the INList and adjust memory budget. */
-                        scanIter.mark();
-                        inList.removeLatchAlreadyHeld(rootIN);
-                        scanIter.resetToMark();
-                        evictBytes = rootIN.getInMemorySize();
+                        inList.remove(rootIN);
+                        evictBytes = rootIN.getBudgetedMemorySize();
 
                         /* Evict IN. */
                         root.clearTarget();
+
+                        /* Stats */
+                        nRootNodesEvictedThisRun++;
+                        nRootNodesEvicted++;
                     }
                 } finally {
                     rootIN.releaseLatch();
@@ -709,7 +689,7 @@ public class Evictor extends DaemonThread {
 
         /* If the root IN was flushed, write the dirtied MapLN. */
         if (evictor.flushed) {
-            envImpl.getDbMapTree().modifyDbRoot(db);
+            envImpl.getDbTree().modifyDbRoot(db);
         }
 
         return evictor.evictBytes;
@@ -719,15 +699,20 @@ public class Evictor extends DaemonThread {
      * Strip or evict this node.
      * @return number of bytes evicted.
      */
-    private long evict(INList inList,
-                       IN target,
-                       ScanIterator scanIter,
-                       boolean backgroundIO,
-                       UtilizationTracker tracker)
+    private long evictIN(IN target, boolean backgroundIO)
         throws DatabaseException {
 
-	boolean envIsReadOnly = envImpl.isReadOnly();
+        DatabaseImpl db = target.getDatabase();
+        EnvironmentImpl envImpl = db.getDbEnvironment();
         long evictedBytes = 0;
+
+        /*
+         * Use a tracker to count lazily compressed, deferred write, LNs as
+         * obsolete.  A local tracker is used to accumulate tracked obsolete
+         * info so it can be added in a single call under the log write latch.
+         * [#15365]
+         */
+        LocalUtilizationTracker localTracker = null;
 
         /*
          * Non-BIN INs are evicted by detaching them from their parent.  For
@@ -757,12 +742,13 @@ public class Evictor extends DaemonThread {
          * false because we don't want to change the generation during the
          * eviction process.
          */
-        if (target.latchNoWait(false)) {
+        if (target.latchNoWait(CacheMode.UNCHANGED)) {
 	    boolean targetIsLatched = true;
             try {
                 if (target instanceof BIN) {
-                    /* first attempt to compress deleted, resident children.*/
-                    envImpl.lazyCompress(target, tracker);
+                    /* First attempt to compress deleted, resident children. */
+                    localTracker = new LocalUtilizationTracker(envImpl);
+                    envImpl.lazyCompress(target, localTracker);
 
                     /*
                      * Strip any resident LN targets right now. This may dirty
@@ -786,7 +772,7 @@ public class Evictor extends DaemonThread {
                  */
                 if (evictedBytes == 0 && target.isEvictable()) {
                     /* Regular eviction. */
-                    Tree tree = target.getDatabase().getTree();
+                    Tree tree = db.getTree();
 
                     /* getParentINForChildIN unlatches target. */
 		    targetIsLatched = false;
@@ -794,20 +780,26 @@ public class Evictor extends DaemonThread {
                         tree.getParentINForChildIN
                         (target,
                          true,   // requireExactMatch
-                         false); // updateGeneration
+                         CacheMode.UNCHANGED);
+
                     if (result.exactParentFound) {
-                        evictedBytes =  evictIN(target, result.parent,
-                                                result.index,
-                                                inList, scanIter,
-                                                envIsReadOnly,
-                                                backgroundIO);
+                        evictedBytes = evictIN(target, result.parent,
+                                               result.index, backgroundIO);
                     }
                 }
             } finally {
 		if (targetIsLatched) {
-		    target.releaseLatchIfOwner();
+		    target.releaseLatch();
 		}
             }
+        }
+
+        /*
+         * Count obsolete nodes and write out modified file summaries for
+         * recovery.  All latches must have been released. [#15365]
+         */
+        if (localTracker != null) {
+            envImpl.getUtilizationProfile().flushLocalTracker(localTracker);
         }
 
         return evictedBytes;
@@ -817,13 +809,7 @@ public class Evictor extends DaemonThread {
      * Evict an IN. Dirty nodes are logged before they're evicted. inlist is
      * latched with the major latch by the caller.
      */
-    private long evictIN(IN child,
-                         IN parent,
-                         int index,
-                         INList inlist,
-                         ScanIterator scanIter,
-			 boolean envIsReadOnly,
-                         boolean backgroundIO)
+    private long evictIN(IN child, IN parent, int index, boolean backgroundIO)
         throws DatabaseException {
 
         long evictBytes = 0;
@@ -840,15 +826,18 @@ public class Evictor extends DaemonThread {
             IN renewedChild = (IN) parent.getTarget(index);
 
             /*
-             * See the evict() method in this class for an explanation for
+             * See the evictIN() method in this class for an explanation for
              * calling latchNoWait(false).
              */
             if ((renewedChild != null) &&
                 (renewedChild.getGeneration() <= oldGenerationCount) &&
-                renewedChild.latchNoWait(false)) {
+                renewedChild.latchNoWait(CacheMode.UNCHANGED)) {
 
                 try {
                     if (renewedChild.isEvictable()) {
+
+                        DatabaseImpl db = renewedChild.getDatabase();
+                        EnvironmentImpl envImpl = db.getDbEnvironment();
 
                         /*
                          * Log the child if dirty and env is not r/o. Remove
@@ -857,7 +846,7 @@ public class Evictor extends DaemonThread {
                         long renewedChildLsn = DbLsn.NULL_LSN;
                         boolean newChildLsn = false;
                         if (renewedChild.getDirty()) {
-                            if (!envIsReadOnly) {
+                            if (!envImpl.isReadOnly()) {
 				boolean logProvisional =
                                     isProvisionalRequired(renewedChild);
 
@@ -866,7 +855,7 @@ public class Evictor extends DaemonThread {
                                  * cleaner migration allowed.
                                  */
                                 renewedChildLsn = renewedChild.log
-                                    (logManager,
+                                    (envImpl.getLogManager(),
                                      false, // allowDeltas
                                      logProvisional,
                                      true,  // proactiveMigration
@@ -880,19 +869,18 @@ public class Evictor extends DaemonThread {
 
                         if (renewedChildLsn != DbLsn.NULL_LSN) {
                             /* Take this off the inlist. */
-                            scanIter.mark();
-                            inlist.removeLatchAlreadyHeld(renewedChild);
-                            scanIter.resetToMark();
+                            envImpl.getInMemoryINs().remove(renewedChild);
 
-                            evictBytes = renewedChild.getInMemorySize();
+                            evictBytes = renewedChild.getBudgetedMemorySize();
                             if (newChildLsn) {
 
                                 /*
                                  * Update the parent so its reference is
                                  * null and it has the proper LSN.
                                  */
-                                parent.updateEntry
-                                    (index, null, renewedChildLsn);
+                                parent.updateNode
+                                    (index, null /*node*/, renewedChildLsn,
+                                     null /*lnSlotKey*/);
                             } else {
 
                                 /*
@@ -900,7 +888,9 @@ public class Evictor extends DaemonThread {
                                  * the node since only the reference
                                  * changed.
                                  */
-                                parent.updateEntry(index, (Node) null);
+                                parent.updateNode
+                                    (index, (Node) null /*node*/,
+                                     null /*lnSlotKey*/);
                             }
 
                             /* Stats */
@@ -924,6 +914,9 @@ public class Evictor extends DaemonThread {
      */
     private boolean isProvisionalRequired(IN target) {
 
+        DatabaseImpl db = target.getDatabase();
+        EnvironmentImpl envImpl = db.getDbEnvironment();
+
         /*
          * The evictor has to log provisionally in two cases:
          * a - the checkpointer is in progress, and is at a level above the
@@ -931,7 +924,7 @@ public class Evictor extends DaemonThread {
          * introduce an IN that has not cascaded up properly.
          * b - the eviction target is part of a deferred write database.
          */
-        if (target.getDatabase().isDeferredWrite()) {
+        if (db.isDeferredWriteMode()) {
             return true;
         }
 
@@ -941,18 +934,11 @@ public class Evictor extends DaemonThread {
          */
         Checkpointer ckpter = envImpl.getCheckpointer();
         if ((ckpter != null) &&
-            (target.getLevel() < ckpter.getHighestFlushLevel())) {
+            (target.getLevel() < ckpter.getHighestFlushLevel(db))) {
             return true;
         }
 
         return false;
-    }
-
-    /**
-     * Used by unit tests.
-     */
-    IN getNextNode() {
-        return nextNode;
     }
 
     /* For unit testing only. */
@@ -960,77 +946,81 @@ public class Evictor extends DaemonThread {
         runnableHook = hook;
     }
 
+    /**
+     * Standard daemon method to set envImpl to null.
+     */
+    public abstract void clearEnv();
+
+    /**
+     * Called whenever INs are added to, or removed from, the INList.
+     */
+    public abstract void noteINListChange(int nINs);
+
+    /**
+     * Only supported by SharedEvictor.
+     */
+    public abstract void addEnvironment(EnvironmentImpl envImpl);
+
+    /**
+     * Only supported by SharedEvictor.
+     */
+    public abstract void removeEnvironment(EnvironmentImpl envImpl);
+
+    /**
+     * Only supported by SharedEvictor.
+     */
+    public abstract  boolean checkEnvs(Set<EnvironmentImpl> envs);
+
+    abstract Logger getLogger();
+
+    /**
+     * Perform class-specific batch processing: Initialize iterator, perform
+     * UtilizationTracker eviction, etc.  No latches may be held when this
+     * method is called.
+     *
+     * startBatch must be called before getMaxINsPerBatch.
+     */
+    abstract long startBatch()
+        throws DatabaseException;
+
+    /**
+     * Returns the approximate number of total INs in the INList(s).  One
+     * eviction batch will scan at most this number of INs.  If zero is
+     * returned, selectIN will not be called.
+     *
+     * startBatch must be called before getMaxINsPerBatch.
+     */
+    abstract int getMaxINsPerBatch();
+
+    /**
+     * Returns the next IN in the INList(s), wrapping if necessary.
+     */
+    abstract IN getNextIN();
+
+    /* For unit testing only.  Supported only by PrivateEvictor. */
+    abstract Iterator<IN> getScanIterator();
+
+    /* For unit testing only.  Supported only by PrivateEvictor. */
+    abstract void setScanIterator(Iterator<IN> iter);
+
     /* For debugging and unit tests. */
-    static public class EvictProfile {
+    static class EvictProfile {
         /* Keep a list of candidate nodes. */
-        private List candidates = new ArrayList();
+        private List<Long> candidates = new ArrayList<Long>();
 
         /* Remember that this node was targetted. */
         public boolean count(IN target) {
-            candidates.add(new Long(target.getNodeId()));
+            candidates.add(Long.valueOf(target.getNodeId()));
             return true;
         }
 
-        public List getCandidates() {
+        public List<Long> getCandidates() {
             return candidates;
         }
 
         public boolean clear() {
             candidates.clear();
             return true;
-        }
-    }
-
-    /*
-     * ScanIterator keeps a handle onto the current round robin INList
-     * iterator. It's deliberately not a member of the class in order to keep
-     * less common state in the class.
-     */
-    private static class ScanIterator {
-        private INList inList;
-        private Iterator iter;
-        private IN nextMark;
-
-        ScanIterator(IN startingIN, INList inList)
-            throws DatabaseException {
-
-            this.inList = inList;
-            reset(startingIN);
-        }
-
-        void reset(IN startingIN)
-            throws DatabaseException {
-
-            iter = inList.tailSet(startingIN).iterator();
-        }
-
-        IN mark()
-            throws DatabaseException {
-
-            if (iter.hasNext()) {
-                nextMark = (IN) iter.next();
-            } else {
-                nextMark = (IN) inList.first();
-            }
-            return (IN) nextMark;
-        }
-
-        void resetToMark()
-            throws DatabaseException {
-
-            reset(nextMark);
-        }
-
-        boolean hasNext() {
-            return iter.hasNext();
-        }
-
-        IN next() {
-            return (IN) iter.next();
-        }
-
-        void remove() {
-            iter.remove();
         }
     }
 }
