@@ -1,9 +1,9 @@
 /*-
  * See the file LICENSE for redistribution information.
  *
- * Copyright (c) 2002,2007 Oracle.  All rights reserved.
+ * Copyright (c) 2002,2008 Oracle.  All rights reserved.
  *
- * $Id: PrintFileReader.java,v 1.12.2.4 2007/11/20 13:32:32 cwl Exp $
+ * $Id: PrintFileReader.java,v 1.22 2008/05/13 01:44:52 cwl Exp $
  */
 
 package com.sleepycat.je.log;
@@ -49,39 +49,25 @@ public class PrintFileReader extends DumpFileReader {
 
         /* Figure out what kind of log entry this is */
 	byte curType = currentEntryHeader.getType();
-	byte curVer =
-	    LogEntryType.getVersionValue(currentEntryHeader.getVersion());
-	byte ignore = 0;
-        LogEntryType lastEntryType =
-	    LogEntryType.findType(curType, ignore /*curVer*/);
+        LogEntryType lastEntryType = LogEntryType.findType(curType);
 
         /* Print out a common header for each log item */
         StringBuffer sb = new StringBuffer();
         sb.append("<entry lsn=\"0x").append
             (Long.toHexString(readBufferFileNum));
         sb.append("/0x").append(Long.toHexString(currentEntryOffset));
-	/* Version in the log not necessarily == lastEntryType.version. */
-        sb.append("\" type=\"").append(lastEntryType.toStringNoVersion()).
-	    append("/").append(curVer);
-        if (LogEntryType.isEntryProvisional(curType)) {
-            sb.append("\" isProvisional=\"true");
-        }
-        sb.append("\" prev=\"0x");
-        sb.append(Long.toHexString(currentEntryHeader.getPrevOffset()));
-        if (verbose) {
-            sb.append("\" size=\"").append(currentEntryHeader.getItemSize());
-            sb.append("\" cksum=\"").append(currentEntryHeader.getChecksum());
-        }
+        sb.append("\" ");
+        currentEntryHeader.dumpLogNoTag(sb, verbose);
         sb.append("\">");
 
         /* Read the entry and dump it into a string buffer. */
 	LogEntry entry = lastEntryType.getSharedLogEntry();
-        readEntry(entry, entryBuffer, true); // readFullItem
+        entry.readEntry(currentEntryHeader, entryBuffer, true); // readFullItem
 	boolean dumpIt = true;
 	if (targetTxnIds.size() > 0) {
 	    if (lastEntryType.isTransactional()) {
 		if (!targetTxnIds.contains
-		    (new Long(entry.getTransactionId()))) {
+		    (Long.valueOf(entry.getTransactionId()))) {
 		    /* Not in the list of txn ids. */
 		    dumpIt = false;
 		}
